Fix performance warning.